Fix issues in search meta with empty API prefix, add static file hosting (#19)
* Fix issues with empty API prefix in search meta

* Uncomment single topic in API documentation

* Remove note about API prefix requiring some value to work

* Add static file hosting, fix hrefs for static docs
